--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,21 +1,32 @@
 nav {
   color: #ffffff;
   background-color: #4056A1;
-  height: 120px;
+  height: 100px;
   width: 100%;
+  position: fixed;
+  padding-left: 1.5em;
+  padding-right: 1.5em;
   display: flex;
-  align-items: center;
-  flex-direction: space-between;
-  z-index: 1;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 span {
   font-family: 'Bungee';
   padding: 0 1.5em;
+  line-height: 5;
 }
 
 .top-right {
   display: flex;
-  align-items: center;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-family: 'Source Sans Pro', sans-serif;
+  line-height: 2;
+  color: red;
+}
+
+.top-left {
+  font-size: 100%;
 }
