--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,10 +1,13 @@
-body > heaher {
-  height: 400;
+body > header {
+  height: 520px;
   width: 100%;
   display: flex;
-  flex-direction: space-between;
+  justify-content: center;
+  flex-direction: column;
   align-items: center;
+  padding-top: 120px;
   background-color: #002757;
   background-image: url("https://www.transparenttextures.com/patterns/45-degree-fabric-light.png");
   
 }
+
