--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -17,6 +17,8 @@ html {
 body {
   font-size: 24px;
   font-family: 'Source Sans Pro', sans-serif;
+  display: flex;
+  flex-direction: column;
 }
 
 /*
@@ -30,4 +32,3 @@ body {
   background-color: white;
  }
 
- 
