--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -30,7 +30,8 @@ textarea::placeholder {
 }
 
 .bottom {
-  margin-top: 2%;
+  margin-top: 5px;
+  margin-bottom: 5px;
   display: flex;
   justify-content: space-between;
 }
