--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -2,68 +2,11 @@ body > header {
   height: 520px;
   width: 100%;
   display: flex;
-  
+  justify-content: center;
   flex-direction: column;
   align-items: center;
   padding-top: 120px;
   background-color: #002757;
   background-image: url("https://www.transparenttextures.com/patterns/45-degree-fabric-light.png");
   
-}
-
-/* Tablet Styles */
-@media only screen and (min-width: 768px) {
-  .feature {
-    width: 33.3%;
-    line-height: 600px;
-  }
-
-  .content {
-    width: 66.7%;
-    float: right
-  }
-
-  .footer {
-    clear: right;
-  }
-}
-
-/* Desktop styles */
-@media only screen and (min-width: 1024px) {
-  .hero {
-    width: 33.3%;
-    float: left;
-  }
-
-  .feature {
-    line-height: 300px;
-  }
-
-  .menu {
-    background-color: #111111;
-    color: #f0f0f0;
-    text-align: left;
-  }
-
-  .tagline {
-    display: inline;
-    font-style: italic;
-    font-weight: normal;
-    font-size: 12px;
-    color: tomato;
-    float: right;
-  }
-
-  .main {
-    max-width: 1024px;
-    font-size: 16px;
-    margin: 0 auto;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  header {
-    width: 50%;
-    margin-left: 5%;
-  }
 }
