--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,13 +1,14 @@
 nav {
   color: #ffffff;
-  background-color: #4056A1;
+  background-color: transparent;
   height: 120px;
   width: 100%;
   position: fixed;
+  top: 0;
+  left: 0;
   padding-left: 1.5em;
   padding-right: 1.5em;
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
 }
 
@@ -58,4 +59,54 @@ nav span i {
   100% {
     transform: translateY(-5px);
   }
+}
+
+@media only screen and (min-width: 1024px) {
+  nav {
+    background-color: #4056A1;
+  }
+
+  .header {
+    width: 30%;
+    float: left;
+    margin-top: 240px;
+    margin-left: 60px;
+  }
+
+  main {
+    width: 60%;
+    float: right;
+    margin-top: 240px;
+    padding-top: 0px;
+  }
+
+  /* body {
+    width: 33.3%;
+    float: left;
+  }
+
+  .feature {
+    line-height: 300px;
+  }
+
+  .menu {
+    background-color: #111111;
+    color: #f0f0f0;
+    text-align: left;
+  }
+
+  .tagline {
+    display: inline;
+    font-style: italic;
+    font-weight: normal;
+    font-size: 12px;
+    color: tomato;
+    float: right;
+  }
+
+  .main {
+    max-width: 1024px;
+    font-size: 16px;
+    margin: 0 auto;
+  } */
 }
